<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/iv_empty_icon_h"
            tools:layout_height="148dp"
            app:srcCompat="@drawable/maxima_empty_state"
            android:id="@+id/imageView2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:contentDescription="@string/cd_empty_alvara_icon"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/alvara_title"
            android:textStyle="bold"
            android:id="@+id/textView4" android:text="@string/empty_alvara_title"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2" android:gravity="center_horizontal"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textColor="@color/alvara_subtitle"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            android:text="@string/empty_alvara_subtitle"
            android:gravity="center_horizontal"/>
</android.support.constraint.ConstraintLayout>