<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             android:layout_marginStart="16dp"
                                             android:layout_marginLeft="16dp">

    <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp" app:srcCompat="@drawable/pedido_icon"
            android:id="@+id/iv_letter"
            android:contentDescription="@string/cd_type_pedido"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/numero_pedido_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/iv_letter" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="@+id/iv_letter"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/tv_numero_pedido"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintTop_toTopOf="@+id/textView2" app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/tv_hora_pedido" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" tools:text="123456"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_hora_pedido" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintTop_toTopOf="@+id/iv_letter" tools:text="15:45"/>
    <TextView
            android:text="@string/cliente_pedido_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
    />
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_cliente_pedido" app:layout_constraintStart_toEndOf="@+id/textView5"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/textView5" tools:text="Nome do cliente"
            app:layout_constraintEnd_toStartOf="@+id/iv_status_pedido" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:srcCompat="@drawable/ic_maxima_legenda_corte"
            android:id="@+id/iv_status_pedido"
            app:layout_constraintTop_toTopOf="@+id/tv_cliente_pedido"
            app:layout_constraintBottom_toBottomOf="@+id/tv_cliente_pedido" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:contentDescription="@string/cd_status_pedido"/>
    <TextView
            tools:text="Processado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_status_pedido" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView5"/>
    <TextView
            android:text="@string/critica_pedido_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_critica_pedido_label"
            app:layout_constraintTop_toTopOf="@+id/tv_status_pedido"
            app:layout_constraintBottom_toBottomOf="@+id/tv_status_pedido"
            app:layout_constraintStart_toEndOf="@+id/tv_status_pedido" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_maxima_critica_alerta"
            android:id="@+id/iv_critica_pedido"
            app:layout_constraintTop_toTopOf="@+id/tv_critica_pedido_label"
            app:layout_constraintBottom_toBottomOf="@+id/tv_critica_pedido_label"
            app:layout_constraintStart_toEndOf="@+id/tv_critica_pedido_label" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/cd_critica_pedido"
            app:layout_constraintEnd_toStartOf="@+id/tv_valor_pedido"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            tools:text="R$ 617,00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_valor_pedido"
            app:layout_constraintTop_toTopOf="@+id/tv_critica_pedido_label"
            app:layout_constraintBottom_toBottomOf="@+id/tv_critica_pedido_label"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
    />
    <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView2"
    />
</android.support.constraint.ConstraintLayout>